alpaca-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    app: alpaca
    ver: '1'
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpaca
      ver: '1'
      env: prod
  template:
    metadata:
      labels:
        app: alpaca
        ver: '1'
        env: prod
    spec:
      containers:
      - name: alpaca-prod
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
