bandicoot-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-prod
  labels:
    app: bandicoot
    ver: '2'
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bandicoot
      ver: '2'
      env: prod
  template:
    metadata:
      labels:
        app: bandicoot
        ver: '2'
        env: prod
    spec:
      containers:
      - name: bandicoot-prod
        image: gcr.io/kuar-demo/kuard-amd64:green
        ports:
        - containerPort: 8080
