ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: alpaca-prod.estudo.com.br
    http:
      paths:
      - backend:
          serviceName: alpaca-prod 
          servicePort: 8080
